--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/fonts/fonts.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <header class="header">
@@ -28,15 +28,15 @@
         <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип 'Оно тебе надо'">
       </a>
       <address class="header__address address">
-        <a class="header__address-link address-link" href="tel:+99995555555">+9 999 555 5555</a> <br>
-        <a class="header__address-link address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a> <br>
+        <a class="address-link" href="tel:+99995555555">+9 999 555 5555</a> <br>
+        <a class="address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a> <br>
         <span>наб. Принсенграхт 263- <br>
           265, Амстердам</span>
       </address>
     </header>
     <main class="main">
       <section class="cover">
-        <div class="cover-overlay overlay"></div>
+        <div class="overlay"></div>
         <h1 class="cover__title">
           <span class="aligned-text">оно</span> <br>
           <span class="aligned-text_center">тебе</span> <br>
@@ -53,7 +53,7 @@
           <li class="lots__card-list-item">
             <a class="card-link">
               <article class="card card_type_film">
-                <div class="card-overlay"></div>
+                <div class="overlay"></div>
                 <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции.
@@ -67,7 +67,7 @@
            <li class="lots__card-list-item">
             <a class="card-link">
               <article class="card card_type_book">
-                <div class="card-overlay"></div>
+                <div class="overlay"></div>
                 <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами
@@ -82,7 +82,7 @@
            <li class="lots__card-list-item">
             <a class="card-link">
               <article class="card card_type_picture">
-                <div class="card-overlay"></div>
+                <div class="overlay"></div>
                 <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и
@@ -99,7 +99,7 @@
       <section class="about">
         <div class="about__column">
           <div class="about__logo">
-            <img src="/images/logo-white.svg" alt="Логотип 'Оно тебе надо'" class="about__logo-image">
+            <img src="./images/logo-white.svg" alt="Логотип 'Оно тебе надо'" class="about__logo-image">
           </div>
         </div>
         <div class="about__column about__column-content">
@@ -114,7 +114,7 @@
             <p class="about__text">Слишком сложные или, наоборот, слишком простые.
               Опережающие своё время. В пух и прах растерзанные критиками.
               Непринятые и непонятые. Когда-то они казались просто неудачными.
-              Но, несмотря <br> на критику, кажущуюся простоту или сложность, сейчас
+              Но, несмотря на критику, кажущуюся простоту или сложность, сейчас
               без этих лотов невозможно представить современную культуру. Когда
               в эти вещи не верил никто, продолжали верить их создатели. И сейчас
               эти лоты стали культовыми.
@@ -125,10 +125,10 @@
     </main>
     <footer class="footer">
       <address class="footer__address address">
-        <a class="footer__address-link address-link" href="tel:+99995555555">
+        <a class="address-link" href="tel:+99995555555">
           +9 999 555 5555
         </a><br>
-        <a class="footer__address-link address-link" href="mailto:info@sobaka.ge">
+        <a class="address-link" href="mailto:info@sobaka.ge">
           info@sobaka.ge
         </a><br>
         <span>
@@ -151,17 +151,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img src="/images/yt.svg" alt="youtube" class="footer__social-icon">
+            <img src="./images/yt.svg" alt="youtube" class="footer__social-icon">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img src="/images/vk.svg" alt="vkontakte" class="footer__social-icon">
+            <img src="./images/vk.svg" alt="vkontakte" class="footer__social-icon">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img src="/images/pinterest.svg" alt="pinterest" class="footer__social-icon">
+            <img src="./images/pinterest.svg" alt="pinterest" class="footer__social-icon">
           </a>
         </li>
       </ul>
