--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text">оно</span> <br>
-          <span class="aligned-text_center">тебе</span> <br>
+          <span class="aligned-text">оно</span>
+          <span class="aligned-text_center">тебе</span>
           <span class="aligned-text_right">надо</span>
         </h1>
         <div class="description">
@@ -105,18 +105,18 @@
         <div class="about__column about__column-content">
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__text-content">
-            <p class="about__text limit-width-content">Здесь вы не встретите очередное пафосное
+            <p class="about__text limit-width-content">
+              Здесь вы не встретите очередное пафосное
               собрание невероятно дорогого антиквариата. Наши лоты вообще не
               должны были попасть ни на один аукцион. Потому что кому нужен
               дневник девочки-подростка или картина, которую может нарисовать даже
               ребёнок? Кому нужны все эти странные вещи, созданные любителями?
             </p>
-            <p class="about__text">Слишком сложные или, наоборот, слишком простые.
+            <p class="about__text">
+              Слишком сложные или, наоборот, слишком простые.
               Опережающие своё время. В пух и прах растерзанные критиками.
               Непринятые и непонятые. Когда-то они казались просто неудачными.
-              Но, несмотря</p>
-            <p class="about__text text-wrap">
-              на критику, кажущуюся простоту или сложность, сейчас
+              Но, несмотря на критику, кажущуюся простоту или сложность, сейчас
               без этих лотов невозможно представить современную культуру. Когда
               в эти вещи не верил никто, продолжали верить их создатели. И сейчас
               эти лоты стали культовыми.
